Fixed the z-index to make button usable

--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -8,18 +8,18 @@
     grid-template-columns: 1fr;
     grid-template-rows: 18vh 1fr 1fr;
     position: relative;
-    z-index: -4;
+    /* z-index: -4; */
 
 }
 
-.mountain{
+/* .mountain{
     display: block;
     min-width: 100vw;
     align-self: end;
     grid-row: -1;
     position: relative;
     z-index: 0;
-}
+} */
 
 .hero{
     display: grid;
@@ -54,6 +54,23 @@
     grid-column: 1 / -1;
     text-align: center;
     padding: 5px;
+    margin: 15px;
+}
+
+.button{
+    z-index: 5;
+    background-color: rgba(252,249,244,0.1);
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
+    color: white;
+    border: 1px solid #FCF9F4;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.button:hover{
+    background-color: rgba(252,249,244,0.3);
+    color: white;
 }
 
 .elevator{
